# 2d-multiplayer-game

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  RFC-RTYPE.txt  ad_README.md  clientRun.bat  clientRun.sh  common.cmake  conanfile.txt  main.cpp  serverRun.bat  serverRun.sh  todo.md
.github/workflows/: cmake.yml
Client/: CMakeLists.txt
Engine/: CMakeLists.txt
Engine/Nuts/: GameObject.hpp  Nuts.hpp  NutsEngine.cpp
Engine/Nuts/EcsComponents/: TransformComponent.hpp
Engine/Nuts/EcsCore/: ComponentArray.hpp  ComponentManager.hpp  Scene.hpp  System.hpp  SystemManager.hpp
Engine/Nuts/EcsSystems/: RenderSystem.hpp
Server/: CMakeLists.txt  SClient.hpp  Server.hpp
client/: CMakeLists.txt  ClientMain.cpp  main.cpp
client/src/: RGameState.hpp  RType.cpp  RType.hpp  RTypeGame.cpp  RTypeGame.hpp  RTypeGameNet.cpp  RTypeMatchmaking.cpp  RTypeMatchmaking.hpp  RTypeMatchmakingNet.cpp  RTypeMenu.cpp  RTypeMenu.hpp  RTypeNet.cpp  RTypeNetCallbacks.cpp  RTypePlayer.hpp  UIEvents.hpp
doc/: doxygenConf
engine/: CMakeLists.txt  GameObject.h  Networking.h  Nuts.h  NutsEngine.cpp
engine/EcsCore/: ComponentArray.h  ComponentManager.h  EntityManager.h  EventManager.h  Scene.h  System.h  SystemManager.h  Types.h
engine/EcsSystems/: RenderSystem.h
engine/EscComponents/: Image.h  SpriteComponent.h  Transform.h  TransformComponent.h
engine/EscCore/: ComponentArray.h  ComponentManager.h  Coordinator.h  Entity.h  EntityManager.h  Event.h  EventManager.h  Scene.h  SystemManager.h  Types.h
engine/EscSystems/: RenderSystem.h
engine/Nuts/: Audio.hpp  Clock.hpp  Color.hpp  Engine.cpp  Engine.hpp  GameObject.hpp  Input.hpp  Networking.hpp  Nuts.h  Nuts.hpp  Rect.hpp  Sprite.hpp  Texture.hpp  Utilities.hpp  Vect.hpp
engine/Nuts/EcsComponents/: SoundComponent.hpp  SpriteComponent.hpp  StateComponent.hpp  TransformComponent.hpp  VelocityComponent.hpp  WidgetComponent.hpp
engine/Nuts/EcsCore/: ComponentArray.hpp  ComponentManager.hpp  EntityManager.h  EntityManager.hpp  Event.hpp  EventManager.h  Scene.hpp  System.hpp  SystemManager.hpp
engine/Nuts/EcsSystems/: AnimationSystem.hpp  RenderSystem.hpp  SoundSystem.hpp  TransformSystem.hpp
engine/Nuts/UI/: Button.hpp  Text.hpp  Widget.hpp
include/: NutsEngine.h  rtype.h
lib/: Pig.hpp
server/: CMakeLists.txt  Console.hpp  Dispatcher.hpp  EcsServer.hpp  GameInstance.hpp  GameThread.cpp  GameThread.hpp  InternalEvents.hpp  Lobby.hpp  Matchmaker.hpp  SClient.hpp  SClientManager.cpp  SClientManager.hpp  Sclient.h  Server.h  Server.hpp  ServerCallbacks.cpp  ServerMain.cpp  main.cpp
server/Components/: Components.hpp
server/Ecs/: EcsServer.hpp
server/Ecs/Components/: Components.hpp
server/Ecs/Systems/: ConnectionSystem.hpp  SClientsSystem.hpp
server/Imgui/: imconfig.h
server/Systems/: ConnectionSystem.hpp  SClientsSystem.hpp
src/: Pig.cpp
